tests/err_qty/trailing_float.stderr
error: unexpected token
 --> tests/err_qty/trailing_float.rs:5:27
  |
5 |     let _err = qty![1.0 m 2.5];
  |                           ^^^
